# bip-initializer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  azure-pipeline-build.yml  azure-pipeline-release.yml  azure-pipelines.yml  pyproject.toml
app/: __init__.py  generate.py  generate_handler.py  health.py  hello.py  main.py
app/templates/: context.json
templates/: helmrelease.j2
tests/: conftest.py  inputs.py  outputs.py  test_app.py  test_generate.py  test_generate_handler.py  test_health.py  test_hello.py  test_input_validation.py  test_metrics.py
