[tool.poetry]
name = "bip-initializer"
version = "0.1.0"
description = "Generate everything your app needs to get started on BIP"
authors = ["Miles Mason Winther <mmw@ssb.no>", "Bjørn Vestli <bjv@ssb.no>", "Lisa Wold Eriksen <lwe@ssb.no>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
prometheus-flask-exporter = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
