[tool.poetry]
name = "bip-initializer"
version = "0.1.0"
description = "Generate everything your app needs to get started on BIP"
authors = ["Miles Mason Winther <mmw@ssb.no>", "Bjørn Vestli <bjv@ssb.no>", "Lisa Wold Eriksen <lwe@ssb.no>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
fastapi = "^0.63.0"
gunicorn = "^20.0.4"
prometheus-fastapi-instrumentator = "^5.7.1"
pre-commit = "^2.10.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
requests = "^2.25.1"

# Retrieved from https://github.com/psf/black/blob/master/pyproject.toml
[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
